--- a/_includes/latest-post.html
+++ b/_includes/latest-post.html
@@ -8,19 +8,19 @@
         {{ page.content | markdownify }}
 
         {% assign post = site.posts.first %}
-        <h4> <strong> {{ post.date | date_to_string }} </strong>
+        <h4> <strong> {{ post.date | date: "%Y-%m-%d" }} </strong>
           <small>.
             <a class="category" href="{{site.baseurl}}/categories/{{post.category | downcase}}.html">
               {{ post.category }}
             </a>
           .</small>
           <strong> <a href="{{site.baseurl}}{{ post.url }}">{{post.title}} </a> </strong>
-          <small> <a href="{{site.baseurl}}{{post.url}}#disqus_thread">Comments</a></small>
+          <small> <a href="{{site.baseurl}}{{post.url}}#disqus_thread">评论</a></small>
         </h4>
 
         {{ post.content | truncatewords: site.post-preview-words | strip_html | markdownify }}
 
-        <h4><a href="{{site.baseurl}}/blog/">View more posts</a></h4>
+        <h4><a href="{{site.baseurl}}/blog/">更多文章</a></h4>
 
       </div>
     </div>
