--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -2,7 +2,7 @@
 <!-- Post List Start -->
 
 <h4 align="left">
-  <strong>{{ post.date | date_to_string }}</strong>
+  <strong>{{ post.date | date: "%Y-%m-%d" }}</strong>
   <small>.
     <a class="category" href="{{site.baseurl}}/categories/{{ post.category | downcase }}.html">
       {{ post.category }}
@@ -13,7 +13,7 @@
     <strong>{{ post.title }}</strong>
   </a>
   <br class="visible-xs-block">
-  <small><a href="{{site.baseurl}}{{post.url}}#disqus_thread">Comments</a></small>
+  <small><a href="{{site.baseurl}}{{post.url}}#disqus_thread">评论</a></small>
 </h4>
 
 <!-- Post List End -->
