--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,13 +18,13 @@
 
           <h1><strong>{{ page.title }}</strong></h1>
           <h4>
-            <strong>{{ page.date | date_to_string }}</strong>
+            <strong>{{ page.date | date: "%Y-%m-%d" }}</strong>
             <small>
-              . category:
+              .
               <a class="category" href="{{site.baseurl}}/categories/{{page.category | downcase}}.html">
                 {{ page.category }}
               </a>.
-              <a href="{{site.baseurl}}{{page.url }}#disqus_thread">Comments</a>
+              <a href="{{site.baseurl}}{{page.url }}#disqus_thread">评论</a>
               <br />
               {% for tag in page.tags %}
                 <a class="tag" href="{{site.baseurl}}/tags/{{tag}}.html">#{{ tag }}</a>
