--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,7 +1,7 @@
 
 <!-- Share Buttons Start -->
 <div>
-  <ul class="rrssb-buttons clearfix">
+  <!-- <ul class="rrssb-buttons clearfix">
     {% if site.email-share %}
       <li class="rrssb-email">
         <a href="mailto:?subject={{page.title}}&body={{site.url}}{{site.baseurl}}{{page.url}}" data-proofer-ignore>
@@ -122,7 +122,7 @@
         </a>
       </li>
     {% endif %}
-  </ul>
+  </ul> -->
 </div>
 
 <!-- Share Buttons End -->
