--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -52,9 +52,9 @@ p {
     font-size: 18px;
     line-height: 1.5;
     @media(min-width:768px) {
-        margin: 0 0 35px;
+        margin: 0 0 20px;
         font-size: 20px;
-        line-height: 1.6;
+        line-height: 1.2;
     }
 }
 
@@ -249,7 +249,7 @@ a {
     /* Added in { Personal } */
     ul,
     ol {
-        text-align: center;
+        text-align: left;
         margin: 0 0 25px;
         font-size: 18px;
         line-height: 1.5;
